feat: add EPN sharing collections comments and activity
